@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -140,6 +140,10 @@ public abstract class TraceContextHolder<T extends TraceContextHolder> implement
 
     public boolean isSampled() {
         return getTraceContext().isSampled();
+    }
+
+    public void setSampled(boolean isSampled) {
+        getTraceContext().setSampled(isSampled);
     }
 
     public boolean isExit() {
